@@ -2,6 +2,8 @@ package net.ripe.rpki.monitor.expiration;
 
 import io.micrometer.tracing.Tracer;
 import lombok.Getter;
+import net.ripe.rpki.monitor.certificateanalysis.CertificateAnalysisService;
+import net.ripe.rpki.monitor.certificateanalysis.ObjectConsumer;
 import net.ripe.rpki.monitor.config.AppConfig;
 import net.ripe.rpki.monitor.expiration.fetchers.RepoFetcher;
 import net.ripe.rpki.monitor.expiration.fetchers.RrdpFetcher;
@@ -15,8 +17,7 @@ import org.springframework.stereotype.Component;
 
 import java.util.List;
 import java.util.Optional;
-
-import static java.util.stream.Collectors.toList;
+import java.util.concurrent.atomic.AtomicBoolean;
 
 @Component
 public class Collectors {
@@ -37,20 +38,29 @@ public class Collectors {
                       AppConfig config,
                       FetcherMetrics fetcherMetrics,
                       WebClientBuilderFactory webclientBuilder,
+                      CertificateAnalysisService certificateAnalysisService,
                       Optional<Tracer> tracer) {
         this.metrics = metrics;
         this.repositoriesState = repositoriesState;
         this.tracer = tracer.orElse(Tracer.NOOP);
 
+        // We track only one of the RRDP repositories
+        AtomicBoolean primaryRrdp = new AtomicBoolean(false);
+
         this.rrdpCollectors = config.getRrdpConfig().getTargets().stream().map(
-                target -> makeCollector(new RrdpFetcher(target, fetcherMetrics, webclientBuilder))
-        ).collect(toList());
+                target -> {
+                    if (primaryRrdp.compareAndSet(false, true)) {
+                        return makeCollector(new RrdpFetcher(target, fetcherMetrics, webclientBuilder), certificateAnalysisService::process);
+                    }
+                    return makeCollector(new RrdpFetcher(target, fetcherMetrics, webclientBuilder), o -> {});
+                }
+        ).toList();
         this.rsyncCollectors = config.getRsyncConfig().getTargets().stream().map(
-                target -> makeCollector(new RsyncFetcher(config.getRsyncConfig(), target.name(), target.url(), fetcherMetrics))
-        ).collect(toList());
+                target -> makeCollector(new RsyncFetcher(config.getRsyncConfig(), target.name(), target.url(), fetcherMetrics), o -> {})
+        ).toList();
     }
 
-    private ObjectAndDateCollector makeCollector(RepoFetcher fetcher) {
-        return new ObjectAndDateCollector(fetcher, metrics, repositoriesState, tracer);
+    private ObjectAndDateCollector makeCollector(RepoFetcher fetcher, ObjectConsumer objectConsumer) {
+        return new ObjectAndDateCollector(fetcher, metrics, repositoriesState, objectConsumer, tracer);
     }
 }
